<resources>
    <string name="app_name">Evasue Bible Study</string>
    <string name="bislet">
                          \n
 ናሆም በጣም የሚወደው ምግብ ቤት አለ፡፡ ብዙ ሌሎች አማራጭ ምግብ ቤቶች ቢኖሩም ይህ ምግብ ቤት ግን ለእርሱ
ለየት የሚልበት ምክንያቶች አሉት፡፡ ይኸውም የስሙ ጽዮን መሆን መስተንግዶው በትህትና የተሞላ እና አክብሮትን ማዘሉ
እና አለመሰልቸቱ ነው፡፡ ከዚህ በላይ ደግሞ የምግቡ ጣዕምና ቃና ወደር አይገኝለትም፡፡ ይሄ ሁሉ እያለ ግን የሚማርከው
ነገር ሁሌ ከእማማ ምስጋና ጋር የሚያሳልፈው ወርቃማ ጊዜ ነው፡፡ ስማቸው እማማ ተባለ እንጂ ለሁሉም ተስተናጋጅ እንደ
እድሜ እኩያው በቀላሉ የሚረዱና ተግባቢ ናቸው፡፡ ለአዲሱም ሆነ ለነባሩ ደንበኛ የሚያሳዩት ፍቅር የተሞላበት አቀራረብ
ለጽዮን ምግብ ቤት መውደድ ምክንያት ሆኗል፡፡  \n\n
        እማማ ምስጋና ለናሆም ቅርብ ከሚላቸው ጓደኞቹ እንደ አንዱ ናቸው፡፡ ሲጨንቀው ለምክር፣ ደስ ሲለው ደስታውን
ለማካፈል፣ ሲርበው ብር ባይኖረው ሊመገብ ወደ እርሳቸው ይሄዳል፡፡ በጣም ደግሞ እንዲወዳቸው ያደረገው ከፍቶት
ማውራት ባቃተው ጊዜ ሳይጠይቁት የልቡን መረዳታቸው ነው፡፡ በሁኔታዎች ሁሉ ምን መናገርና ማድረግ እንዳለባቸው
ጠንቅቀው ያውቃሉ፡፡ ናሆም ከሌላው ተስተናጋጅ ሁሉ በጣም ስለቀረባቸው ስለእርሳቸው የነበረው አመለካከት ላቅ
ይላል፡፡ ተገቢውን ጣፋጭ ምግብና መስተንግዶ እስካገኙ፣ ለሌሎች ተስተናጋጆች የእማማ ምስጋና መኖርና አለመኖር ትልቅ
ለውስጥ ላያመጣባቸው ይችላል፡፡ ለናሆም ግን መስተንግዶውም ምግቡም እያለ የእማማ አለመኖር የማይሆንለት ነገር
ነው፡፡ እርሱ እሳቸውን ማግኘቱ ብቻ እርካታንና ልዩ ስሜትን ያጎናጽፈዋል፤ ግቡ ሁሌም እማማን ለማግኘት ስለሆነ ነው፡፡  \n\n
        የክርስቲያኖች ሕብረ፣ በግል ከአምላካችን ጋር ያለን ሕብረትና የአምልኮ ጊዜዎቻችን ሁሉ አንድ ልዩ ነገርን ይዘዋል፡፡
ለክርስቲያኖች ሕብረት መሰናክል እንዳለ ሁሉ በግል ከአምላካችን ጋር ላለንም ሕበረት መሰናክል አይጠፋም፡፡ የኛን
ሕብረት  ግን  ከዚህ  ሁሉ  ትግል  በላይ  ያደረገው  ሁሉን  ቻይ  ከእስትንፋስ  ይልቅ  ቅርብ  የሆነ  ማንነቱን  ቃላት  ገልጾ
የማይጨርሰው አምላክ እና አባት እግዚአብሔር በመሀከላችን መኖሩ ነው፡፡ ናፍቆታችን ፕሮግራሞች፣ ሰዎቹ እና ሌሎች
ነገሮች ሳይሆኑ የእግዚአብሔር መገኘት ሊሆን ይገባል፡፡ \n
      \t\t\t\t\t\t\t\t\t\t  መግቢያ፡- መዝሙር 84፣ 1-10 \n
       መዝሙር 84 በሰራዊት ጌታ ማደሪያ ውስጥ የሚዘመር የደስታ መዝሙር ነው፡፡ ክፍሉ ለዝማሬ አገልግሎት በተለዩት በቆሬ
ልጆች የተዘመረ ሲሆን ፀሐፊው ወደ ቤተመቅደሱ ያለውን ጉዞ አጠቃላይ ትዕይንት በክፍሉ አስፍሯል፡፡ \n\n
        አይሁዶች በየዓመቱ ከተለያየ ቦታ በመነሳት ወደ ማደሪያው ወይም ወደ ኢየሩሳሌም ሃይማኖታዊ ጉዞ የማድረግ ልምድ
ነበራቸው፡፡ በዚህም ጉዞ ሰው የማይኖርባቸውን ደረቅ ስፍራዎች ማለትም “የባካ ሸለቆ” ወይም የ”ለቅሶ ሸለቆ” ተብለው
የሚጠሩ  ቦታዎችን  በሚያልፉ  ጊዜ  እግዚአብሔር  የውሃ  ምንጭ  መፍለቂያ  እስኪመስል  ድረስ  አስቸጋሪውን  ሁኔታ
ያቀልላቸዋል፤ እንዲሁም በደስታ ለተሞላው እምነታቸው በሚያረሰርስ ጠል /ዝናብ/ ምላሽን ይሰጣቸዋል፡፡ \n\n
        ይህ ሃይማኖታዊ ጉዞ በፍጻሜ እግዚአብሔርን ራሱን በመገናኘትና በጸሎት በሚገኝ ሕብረት ይጠናቀቃል፡፡ ይህንን ጉዞ
ለረዥም ጊዜ ሲናፈቅ የነበረውን የማደሪያውን ውበት በታላቅ አድናቆትና ደስታ ለመጀመሪያ ጊዜ እንደሚመለከት ሰው
አድርገን ብናስብ በመጀመሪያ ጊዜ እንደሚመለከት ሰው አድርገን ብናስብ በመጀመሪያ ተወዳጅነቱ ቀጥሎም ለታናናሾቹ
አዕዋፍት  እንኳን  ከለላ  መሆኑን  እንደሚገነዘብ  ከክፍሉ  እንረዳለን፡፡  ምንም  እንኳን  በአዲስ  ኪዳን  እንዲህ  ዓይነቱ
ሃይማኖታዊ ጉዞ ባይኖርም የእግዚአብሔር መገኘት የሚሰጠውን ውበት ግርማና ደስታ በዚህ ጥናት እንማራለን፡፡
</string>
    <string name="vlm_desc">እኛ የ “Bahir Dar University Christian Students Fellowship VLM” አባላት ይህን የኢቫሱ የፍቅር ህብረት የመጽሃፍ ቅዱስ ማጥኛ እለት እለት በምንጠቀመው ቴክኖሎጂ ስናቀርብ ክርስቶስን ያማከለ ፍቅር እንዲኖረንና ህብረቱ እንዲታነጽ በማሰብ ነው። ይህ የመጀመሪያ ስራችን ሲሆን ጌታ ቢፈቅድ እና ብንኖር ብዙ መስራት እንፈልጋለን። የዚህ አፕልኬሽን ቀጣይ Version በቅርቡ መልቀቅ እናስባለን።</string>
    <string name="vlm_logo">vlm logo</string>
    <string name="study2"> \n
        ሰው  ሁሉ  በራሱ  መም  (መሮጫ)  ላይ  ይሮጣል፡፡  በማግኘት፣  በማጣት  በደስታ፣  በሀዘን  በብዙ  ተቃራኒ  ክስተቶች
ይታጀባል፡፡ ሜዳው ታዲያ  ለጥ  ያለ አይደለም፣  ጎርባጣነት ይበዛበታል፡፡ መውጣትና መውረድን ይጠይቃል፡፡  በእኛ
በወጣቶች ዘንድ ደግሞ ለሩጫው የሚፈለገውን ትጋት ለማሳየት ጠንካራ መሆን ያስፈልጋል፡፡ አብዛኛውን ጊዜ መዝናናት
የበዛበትን እንጂ የምንተጋበትን ነገር አንወድም፡፡ ከዚህም የተነሳ በትምህርታችንም ሆነ በምናደርገው ማንኛውም እንቅስቃሴ
ዓላማችንን ለማሳካት ጥረት ስናደርግ አንታይም፡፡ በሌላ ጎኑ ደግሞ ትጋታችን አንድ አቅጣጫ ብቻ ይይዛል፡፡ ይህም ማለት
በትምህርቱ የሚተጋ ሰው በክርስቲያን ተማሪዎች ህብረት ወይም በካምፓስ ውስጥ በሚደረጉ ሌሎች እንቅስቃሴዎች
ሁለንተናዊ መሆን ያቅተዋል፡፡ \n\n
       \t\t\t\t\t\t\t\t\t\t መግቢያ፡- 2 ጴጥ 1፡ 2-11 \n
        የሁለተኛ  ጴጥሮስ  መልዕክት  ፀሐፊ  ሐዋሪያው  ጴጥሮስ  መሆኑን  በብዙ  የሥነ-መለኮት  አዋቂዎች  ዘንድ  ይታመናል፡፡
በመሆኑም ሐዋርያው ጴጥሮስ በዚህ በሁለተኛ መልዕክቱ ክርስቶስ ኢየሱስ በምድር ላይ በተመላለሰባቸው ወራት አብሮት
በመሆኑና  በቅርበትም  ጌታ  ያደርጋቸው  የነበሩትን  ነገሮች  በመመልከቱ፣  ከክርስቶስም  እግር  ስር  ተቀምጦ  በመማሩ፣
እንዲሁም ክርስቶስ ኢየሱስ ተልዕኮውን ለመፈጸም እንዴት ባለ ጥረትና ትጋት ይመላለስ እንደነበር በማስተዋሉ ይኸው
እውነት በመልዕክቱ ተንፀባርቋል፡፡ \n\n

ሐዋርያው ጴጥሮስ ጌታን ለመከተል ከወሰነበት ጊዜ አንስቶ የክርስትና ሕይወት የሚጠይቀውንና የሚያስከፍለውን ዋጋ
በትክክል ያውቃል፡፡ ከሁሉም በላይ እርሱ ከጌታ በቀጥታ የተቀበለው ብርቱ አደራ ስለነበረበት ያንን ለመወጣት ዘወትር
ይተጋ ነበር፡፡ በመሆኑም መልዕክቱ የተጻፈላቸውና እኛም የዛሬዎቹ አማኞች ክርስቲያናዊ ጥሪና የመንፈሳዊ ህይወት እድገት
የተዛመደ እንዲሆንና ለተጠራንበት እንድንኖር በየዕለቱ መትጋት ይኖርብናል፡፡ አንዳንድ ሰዎች ለመንፈሳዊ ህይወት ዕድገት
የሰውን ድርሻ በጣም አሳንሰውና አኮስሰው ይናገራሉ፡፡ ሆኖም ራስን ዲስፕሊን አድርጎ መኖር፣ የጀመሩትን በትጋት በየዕለቱ
ማከናወን ተገቢ መሆኑን ሐዋርያው ይመክራል፡፡ አንድ አካላዊ ብቃት (Physical Fitness) እንደማይገኝ ሁሉ ያለ ዕለታዊ
ትጋትም መንፈሳዊ ብቃት (Spiritual Fitness) አይገኝም” ብለዋል፡፡
    </string>
    <string name="study3"> \n
               እርግጥ ነው ሰው በባህሪው ራሱን ከሌሎች ጋር ማወዳደር፣ አወዳድሮም ለራሱ ሚዛን መስጠትና ራሱን በመዘነውም ልክ
ክብርንና ምስጋናን መፈለጉ ተፈጥሯዊ ማንነቱ ነው፡፡ ታዲያ ይህንን የሰው ባህሪ ጠንቅቆ የሚያውቀው ኢየሱስ ክርስቶስ ግን
ሕይወቱም ሆነ  ትምህርቱ  ከዚህ  ተቃራኒ  ነበር፡፡  አንድ  ጊዜ  በደቀመዛሙርቱ  መካከል  ለተነሳው  “ታላቅ  ማን  ነው?”
በመካከላችሁ ታላቅ የሆነ እንደ ታናሽ፣ የሚገዛም እንደሚያገለግል ይሁን” ብሎ ነው፡፡ ከዚህም በላይ እርሱ ራሱ በዙፋን
ከመቀመጥ ይልቅ አገልጋያቸው ሆኖ እግራቸውን እስከማጠብ ድረስ ትህትናን አሳይቷቸው ነበር፡፡ ችግሩ ታላቅ ወይም
የተሻልን  ነን  ብለው  ማሰባቸው  ላይ  ብቻ  ሳይሆን  ለታላቅነታቸው  የተሻለ  ክብርን  መፈለጋቸው  ወይም  ሌላውን
አለመቀበላቸው ላይ ነበር፡፡ \n\n
በጣም  የሚገርመው  ደግሞ  ዛሬም  ከ2000 ዓመታት  በኋላ  በደቀመዛሙርቱ  የነበረው  ጥልና  ክርክር  ከሕብረቶቻችን
አለመጥፋታቸው ነው፡፡ እንዲያውም በሕብረቶቻችን መካከል ያሉ ብዙዎቹ ጥሎና ግጭቶች መነሻቸው ቢጠና ኢየሱስ
ለደቀመዛሙርቱ ያስተማረው ትህትና አለመኖሩ ሊሆን ይችላል፡፡ ይህም ራስን ብቻ የተሻለ አድርጎ በመቁጠርና የሌሎችን
ጸጋ ማናናቅ ብሎም አለመቀበል ነው፡፡ ታዲያ በዚህ ምክንያት እግዚአብሔር በደሙ አንድ አድርጎ ያቆማቸው ምክንያት
እግዚአብሔር በደሙ አንድ አድርጎ ያቆማቸው ሕብረቶች ሲፈርሱ አልያም ሲከፋፈሉ ማየት እንድያውም የተሻልን ነን ባዮቹ
ያላቸውን ነገር በፍቅር እና በትህትና ለሌሎች ከማስተማር ይልቅ የየረሳቸውን ጎራ ለይተው መውጣታቸው የተለመደ
ሆኗል፡፡ ምዕመን መሪውን አለማክበሩ፣ መሪም እራሱ ከሁሉ እንደተሻለ መቁጠር፣ ማንንም አለመስማቱ፣ ወንበር ላይ
ተቀምጦ የአገልጋይና የሰባኪ ተቺ እና ስህተት ፈላጊ መሆኑ እና የመሳሰሉትን ስንመለከት ዘንድሮም ኢየሱስ ለደቀመዛሙርቱ
ያሳየው ትህትና በአማኙ ሕይወት የጎደለ መሆኑን ያሳያል፡፡ \n\n
አንዱ  መንፈስ  ታዲያ  ለእያንዳንዱ  እንደወደደ  የሰጠው  የጸጋ  ስጦታ  ልዩነት  ምስጢር  እርስ  በእርስ  እንድንፈላለግና
ሕብረታችንን ለማስተሳሰር ነው። ይህ ግን እውን ሊሆን የሚችለው በመካከላችን መቀባበል ሲኖርና ትሁት ሆነን በሌሎች
ያለውን ጸጋ ማክበር ስንችል ብቻ ነው፡፡ ስለዚህም ሕብረቶቻችንን ለመጠበቅ እንዲሁም እግዚአብሔርን ወደ መምሰል
ሊያደርሱን የተሰጡንን በወንድሞችና በእህቶች ያለውን ልዩ ልዩ ፀጋ ተጠቅመን እግዚአብሔር ወዳየልን ግብ እንድንደርስ
ትህትና ዋነኛው መንገድ ነው፡፡ \n
    \t\t\t\t\t\t\t\t\t\t    መግቢያ፡- ፊጲ 2፣ 1-11 \n
        የፊልጵስዮስ መልዕክት የተጻፈው ሐዋርያው ጳውሎስ ስለ ወንጌል በሮም ወህኒ ቤት ታስሮ በነበረበት ጊዜ ነው፡፡ ይህም
መልዕክት ከኤፌሶን፣ ከቆላስይስና ከፊልሞና መልዕክቶች ጋር በዚያው ጊዜ በሐዋርያው ተጽፎ በአናሲሞስ በኩል ወደ
የአብያተክርስቲያንቱ  ተላከ፡፡  እነዚህ  “የእስር  ቤት  ደብዳቤዎች”  በመባል  የሚታወቁት  በየአብያተ  ክርስቲያናቱ  ዘንድ
ተዘዋውረው እንዲነበቡ (ከፊልሞና መልዕክት በስተቀር) በሐዋርያው ታዟል፡፡
ወቅቱ ወንጌል አለምአቀፋዊ ትኩረት ያገኘበት ጊዜ ሲሆን ከኢየሩሳሌም ተነስተው የእስያውያንና የአውሮፓውያንን ዓለም
በወንጌል ለማዳረስ ሚስዮናዊያን ተዘዋውረዋል፡፡
ወንጌል በኃጢአት ባርነት ሥር የነበሩትን ነጻ ማውጣቱ ብቻ ሳይሆን አብሳሪዎቹም ያንን የምስራች ተዘዋውረው እንዳያበስሩ
የተከለከሉበትና መከራን የተቀበሉበትም ጊዜ ነበር፡፡ ከዚህም የተነሳ ሐዋርያው ጳውሎስ መልዕክቱን የጻፈው በሮም የቁም
እስረኛ ሆኖ ሳለ ነበር፡፡ \n\n
የፊልጵስዮስ ከተማ በሮም ምድር ለመጀመሪያ ጊዜ ወንጌል ተሰብኮባት ቤ/ክን የተተከለባት ስፍራ ስትሆን ሚሲዮናዊያኑ
ታስረዋል  ተደብድበዋልም፡፡  በከተማዋ  ብዙ  አይሁዶች  ስላልነበሩ  ምኩራብ  አልነበረባትም፡፡  በመሆኑም  አብዛኛዎቹ
አማኞች ከአህዛብ ወገን ነበሩ፡፡ ከመጽሐፉም እንደምንመለከተው ቤተክርስቲያኗ ከጳውሎስ ጋር ወንጌልን በማስረጨት
ተካፋይ ነበረች፡፡ ሐዋርያው የፊልጵስዮስን መልዕክት የጻፈበት ዋናው ምክንያት በአፍሮዲጡ በኩል የተላከለትን ስጦታ
አስመልክቶ  ለማመስገንና  በመካከላቸው  ያለውን  ያለመግባባት  ችግር  ለመቅረፍ  ነበር፡፡  መንፈሳዊ  አንድነታቸውን
እንዲጠብቁና ለአንድነታቸው መሰረት የክርስቶስን የትህትና ምሳሌ እንዲከተሉም ያሳስባቸዋል፡፡ በተጨማሪም ክርስቶስ
ፍጹም አምላክ ሆኖ ሳለ የሰውን ልጆች ከዘላለም ኩነኔ ለመዋጀት ሰው መሆኑን፣ የባሪያን መልክ መያዙንና በመስቀል ላይ
መሞቱን፣ በማሳየት በትህትና እንዲኖሩ ይጽፍላቸዋል፡፡
    </string>
    <string name="study4">
     “አጥንት የሌለው ትንሽና ደካማ የሚመስለው አንደበት ሰውን ሊያደቅና ሊገድል ይችላል” የሚለው አባባል በየእለቱ
ውሎአችን ላይ እውነተኛነቱ ይረጋገጣል፡፡ በሰዎች መካከል እንደ መግባቢያነት የምንጠቀመው የቋንቋ ንግግር በአሉታዊ ጎኑ
ከሰይፍ የበለጠ ብዙዎችን እያጠፋ፣ በመልካም ጎኑ ደግሞ ለብዙ ቁም ነገር መስሪያ እየተጠቀምንበት ይገኛል፡፡ ታዲያ
እንዴት አድርገን ይህን በጎ ጎን እናጉላው? የንግግራችን ትልቁ መጋዘን የሆነውን ልብ በምን እንሙላው? ዛሬ ልናጤነው
የሚገባ ጉዳይ ይሆናል፤ ምክንያቱም ንግግሮቻችን ሁሌም የሚመዝኑት ተናጋሪውን ነውና፡፡ በተለይም በከፍተኛ ተቋማት
አካባቢ ተደማጭነትን ለማግኘትና ለመወደድ ስንል የምንጨምራቸው፣ የክፋትን ተልዕኮ የሚያበረታቱ፣ የሚያንቋሽሹ
ንግግሮች በእግዚአብሔር ቃል ሲመዘኑ ምን ይሆናሉ? \n
ወጣቶች  እንደመሆናችን  መጠን  ለወሬ  ከመቸኮል  ይልቅ  ከአንዱ  የሰማነውን  ለሌላው  ስናስተላልፍም  በምን  ዓላማ
እንዳልነው ብናስተውል አላስፈላግ ቃል እንዳናወጣ ልጓም ያበጅልናል፡፡ \n\n

ዶርም በሳቅ ተሞልቷል፤ የዶርሙ አባላት አልጋቸው ላይ ቁጭ ብለው እንባቸው እስኪፈስ ይስቃሉ፡፡ በእርግጥም ኤልሳ
ካለች አፋቸው አይከደንም፡፡ ግን በዚሁ ሁሉ መሀል ሃና ተናዳለች፤ ምክንያቱም ዛሬ የምትተረበው ተረኛ እርሷ ናት፡፡
ተራው ለዶርሙ አባል ብቻ ሳይሆን ለሚያውቋቸው ሰዎች ሁሉ ይደርሳል፡፡ ኤልሳ ሁሌ ተረብዋን ስትጨርስ “እኛ እኮ
ስለምንወደው ነው እንደ ጋዜጠኛ ተከታትለን ስለ እርሱ የምናወራው” ትላለች፡፡ ግለሰቦች ላይ የሚጀመረው ይህ ቀልድ
ደረጃውን አሳድጎ በዘር፤ በሃይማኖት፣ በመጽሐፍ ቅዱስ ጥቅሶችና በመዝሙሮች ላይ ይቀጥላል፡፡ ምንም እንኳን ቀልዱ
ለኤልሳ  ተጫዋች  ቢያሰኛትም  ተአማኒነትን  ግን ነፍጓታል፡፡  የምሯን  ብታወራም እንኳ  እንደማትቀልድ  ማሰብ ማንም
አይፈልግም፡፡ ሁሌም ከሳቅ ምሽቶች በኋላ የሚቆረቁር ስሜት በእያንዳንዱ ውስጥ ይፈጠራል፤ ወዳጅህ ሲታማ ለኔ ብለህ
ስማ ነውና፡፡
    </string>
    <string name="study5">
        የአብዛኞቻችን ህይወት የውጭ አልጋ የቤት ቀጋ ሆኖ እናገኘዋለን፤ ምክንያቱም ሰዎች ፊት ጥሩ ባህርይ ስለምንላበስ፡፡
ይሉኝታም ሆነ ሰዎችን ለመማረክ ከምናደርገው ጥረት የተነሣ እውነጠኛው ማንነታችን ላይ ጭምብል አጥልቀን እንገኛለን፡፡
ሆኖም ማንም ሰው አጠገባችን ሳይኖር ወይም አጠገባችን ያለው ሰው ስለኛ ምንም መረጃ የሌለው ከሆነ ይህ ማንነት ራሱን
ይገልጣል፡፡ \n\n
ቀኑ ወደ አመሻሹ ተቃርቧል ማርታ በመኝታ ክፍሏ () ብቻዋን ነች፡፡ ጓደኞቿ ለእረፍት ወደቤታቸው ስለሄዱ በመኝታ ክፍሏ
ሙሉ  ነፃነት  ተሰማት፡፡  የጓደኛዋ  አልጋ  ላይ  ቁጭ  እንዳለች  አንድ  ደብተር  አይኗን  ሳበው፡፡  የሚያማምሩ  አበቦች
ተስለውበታል፡፡ ሜሪ የየቀን ውሎዋን የምታሰፍርበትን ደብተሯን ረስታው ሄዳ ነበር፡፡ ፊቷን አንዴ ፈገግ አንዴ ጨፍገግ
እያደረገች ማንበቧን ቀጠለች፡፡ ማንበቤን ብታውቅ ሜሪ ምን ይሰማት ይሆን? ለውስጧ ጥያቄ መልስ ሳትሰጠው የሌላዋን
የዶርሟን አባል የልብስ ማስቀመጫ ከፍታ አንድ በጣም የምትወደውን ልብስ ለብሳ ስትንጎራደድ በሩ የተንኳኳ መሠላትና
ደነገጠች፡፡ ልብሱን በፍጥነት አውልቃ በሩን ስትከፍት የመጣ ሰው አልነበረም፡፡ ጓደኞቿ መጥተው ቢሆን ኖሮ ምን
እደሚሏት አሰበች፣ ለካ ሰው “ውስጡን ለቄስ ነው” ድርጊቷ አስደነገጣት፡፡ \n\n
        \t\t\t\t\t\t\t መግቢያ፡- ማቴ. 23፡ 25-27 \n\n
        ማቴዎስ 23 ጌታ ኢየሱስ  በዘመኑ የነበሩትን የሃይማኖት መሪዎች ፈሪሳውያንንና ፀሃፍትን (የኦሪት ህግ  መምህራንን)
የነቀፈበት ክፍል ነው፡፡ እነዚህ ሰዎች በዘመኑ ከነበሩት የሐይማኖት ክፍሎች (ቡድኖች) ዋነኞቹ ነበሩ፡፡ ምንም እንኳ
በአንዳንድ  አስተምህሮዎች  ቢለያዩም  ሁለቱም  የዘመኑ  የሐይማኖት  መሪዎች  ነበሩ፡፡  በምዕራፉ  መጀመሪያ  ላይ
እንደምናገኘው  በሙሴ  እግር  ተተክተው  ህዝቡን  የሚያስተምሩ  ነበሩ፡፡  በዘመኑ  ከነበሩ  ሰዎች  እጅግ  መንፈሳውያንና
ለሀይማኖት የሚቀኑም በእግዚአብሔር ቃል ላይ ካላቸው ጥልቅ እውቀት የተነሳም የእግዚአብሔርን ህግ አስተማሪዎች
ተብለዋል፡፡ ነገር ግን የሚያስተምሩትና በህይወታቸው የሚተገብሩት እጅግ የተራራቀ ነበር፡፡ ለሥነ-ምግባር መጠበቅ ዋነኛ
ተሟጋቾች ቢሆኑም እነርሱ ግን ያንን መተግበር አልቻሉም፡፡  \n\n
        ኢየሱስም በሃይማኖተኝነት የተሸፈነውንና የተበላሸውን ማንነታቸውን እያወጣ የፍርድ ቃል ይናገራቸው ነበር፡፡ እነዚህ
ሰዎች በሌሎች ዘንድ እንዲሰጣቸውና፣ መስለው መታየት የሚፈልጉት ማንነት ፈጽሞ ከኑሮአቸው ጋር አይሄድም፡፡ በዚህ
ምክንያት ለእግዚአብሔር የቅርብ ሩቅ ሆነው ነበር፡፡ እንቅስቃሴዎች ላይ መሳተፍ ለመንፈሳዊ ህይወታችን ጥናከሬ ምስክር
ሊሆን አይችልም፡፡
    </string>
    <string name="title1"> ጥናት 1</string>
    <string name="subtitle1"> ህልውናውን መናፈቅ (መዝሙር 84፣ 1–10)</string>
    <string name="subtitle10">2ኛ ሳሙ 13፡1–17</string>
    <string name="discussion10_title">2ኛ. ሳሙ 13፡ 1-17 \n</string>
    <string name="discussion10">1.በዙሪያህ(ሽ) ያሉ ሰዎች አንድን ሰው ፍቅር ይዞታል የሚሉት ምን ዓይነት ነገሮች ሲታዩበት ነው? \n\n
    2.የአምኖን ፍቅር እውነተኛ እንዳልሆነ በክፍሉ እንዴት ተገልጧል? \n\n 3.በያዕ. 1፡ 14-15 መሰረት የአምኖንን የውድቀት ሂደት እንዴት ትገልፀዋለህ(ሽ)? \n\n
    4.አምኖን ከትዕማር ጋር ከተኛ በኋላ ለምን ጠላት? ይህስ ምን ያስተምረናል? \n\n 5.እውነተኛ ፍቅርና እውነተኛ ያልሆነ ፍቅር ባህሪያት ምን ምን ናቸው? \n\n
    6.የአምኖን ሐሳብ ተፈጻምነትን ያገኘው እንዴት ነው? ይህስ ምን ያስትምረናል? \n\n 7.ከዚህ ጥናት ምን ተማርክ ?</string>
    <string name="preface_1">ይህ የመጽሐፍ ቅዱስ ጥናት መተግበሪያ ለግልም ሆነ ለቡድን ጥናት ይጠቅማል፡፡ በቡድን ጥናት ግን የበለጠ ጠቃሚነት
አለው፡፡ ስለዚህ መሪው የጥናት ጊዜውን ከመጀመሩ በፊት በደንብ መዘጋጀት አለበት፡፡ ከዚህ በታች የተገለጹት ሐሳቦች
እንዴት የመጽሐፍ ቅዱስ ጥናት ቡድን መምራት እንደሚቻል ለመሪው ግንዛቤ ይሰጣሉ፡፡ </string>
    <string name="preface_2_title">ከቡድን ጥናቱ በፊት</string>
    <string name="preface_2">1.የተከታዩን ሳምንት ጥናት ክፍል አስቀድመህ ለአጥኚዎች በመስጠት አንብበውት እንዲመጡ አድርግ፡፡  \n\n
    2.የጥናቱን ክፍል በጸሎት በመሆን ሀሳቡን እስክትረዳው ድረስ ደጋግመህ አንብበው፤ ቢያንስ ሁለት ጊዜ ቢነበብ ጥሩ
ነው፡፡ \n\n 3.ወደተዘጋጀው ጥናት በመሄድ ጥናቱን በማጥናት እግዚአብሔር በግል ለራስህና ለቡድን የሚልህን አስተውል፡፡
በዚህ ጥናት ሦስት ዓይነት ጥያቄዎችን እናገኛለን፡፡ \n\n \t\t 3.1 የመመልከት ጥያቄዎች (OBSERVATION) - ምንባቡ ስለምን እንደሚናገር ለመረዳት የሚረዱ ጥያቄዎች፣ \n\n \t\t 3.2 የመተርጎም ጥያቄዎች (INTERPRETATION) - የፍቺ ወይም ዋና ሐሳቡን የመረዳት ጥየቄ፣
    \n\n \t\t 3.3 የማዛመድ ጥያቄዎች (APPLICATION) - ዋና ዋና ሐሳቦችን በግል ወይም በቡድን ከሕይወታችን ጋር
ማገናዘብ፤  \n\n 4.ለእያንዳንዱ የቡድን አባል ጸልይ፡፡  </string>
    <string name="preface_3_title">በቡድን ጥናት ጊዜ</string>
    <string name="preface_3">1.ሁሉም የመጽሐፍ ቅዱስ ጥናት ቡድን አባላት በነጻ ሐሳባቸውን ሊሰጡ የሚችሉበትን ሁኔታ መፍጠር \n\n 2. የጥናቱን ክፍል ሁሉም አባላት ሊሰሙት በሚችል ድምጽ ከቡድን አባላት በአንድ ወይም በሁለት ማስነበብ፤
    \n\n 3. እያንዳንዱ ጥናት የራሱ መግቢያ ካለው በጥናቱ መጀመሪያ ላይ ለቡድኑ አባላት ሁሉ ማንበብ (የጥናቱ ዓላማ
ግን ለቡድን አባላት የሚነበብ ሳይሆን መሪው እንዲመራበት ብቻ ነው)፡፡ \n\n 4.ባለመጨነቅ ዘና ብሎ በቅደም ተከተል ጥያቄዎችን መጠየቅ፣ አስፈላጊም ሲሆን ጥያቄውን በሌላ አባባል
(በተብራራ ሁኔታ) ማቅረብ፣ በዚህ ጊዜ ውይይቱን በጥናቱ ክፍል ላይ ብቻ መመስረትና መጽሀፍ ቅዱስን ዋና
ባለሥልጣን ማድረግ፤ \n\n 5.ሰዓቱን በሚገባ መቆጣጠር፣ ይኸውም ጥናቱን በሚገባ አጥንቶ ለመጨረስ፣ ለጸሎትና ለምስክርነት ጊዜ
እንዲበቃ በማድረግ መከፋፈል፤   \n\n 6. ብዙ  ጊዜ  የመመልከት  ጥያቄ  ላይ  አለመግደል፣  የማዛመድ  ጥያቄው  ሐሳብ  እንዳይረሳ  ጥሩ  ውይይት
በመተርጎም ጥያቄዎች ላይ እንዲደረግ መፍቀድ፣ የማዛመድ ጥያቄዎችን በፍጹም አለመተው፤ \n\n 7.እያንዳንዱ የቡድን አባል ከተጠናው ጥናት ቢያንስ አንድ ግልጽ የሆነ ከሕይወቱ ጋር የሚዛመድ መልእክት
እንዲያገኝ ዓላማ ማድረግ፤  \n\n 8. እያንዳንዱ  የመጽሐፍ  ቅዱስ  ጥናት  ቡድን  አባል  ለሚቀጥለው  የጥናት  ስብሰባ  በግል  ራሱን  አዘጋጅቶ
እንዲመጣ ማበረታታት፤ </string>
    <string name="preface_4_title">ከጥናቱ በኋላ </string>
    <string name="preface_4">1.ለእያንዳንዱ የጥናት ቡድን አባል፣ ማንኛውንም ችግርና ጉዳይ ለመካፈልና ክትትል ለማድረግ፣ ትኩረትና ቦታ
መስጠት፣  \n\n 2.የቡድን አባላት የሚቀጥለው የጥናት ጊዜ እስኪደርስ ድረስ ለመረዳዳትም ሆነ ልምዳቸውን ለመለዋወጥ እንዲገናኙ
ማበረታታት፣ </string>
</resources>