<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".prefaceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Evasue Bible Study"
        app:titleTextColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#af532c"
        android:elevation="20dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="መቅድም"/>

<TextView
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/preface_1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:src="@mipmap/line_design2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/preface_2_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preface_2"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@mipmap/line_design2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/preface_3_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preface_3"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@mipmap/line_design2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preface_4_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preface_4"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@mipmap/line_design2"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>