<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".study1Activity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="20dp"
            app:contentScrim="#af532c"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@mipmap/prescence"
                app:layout_collapseMode="parallax"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="ህልውናውን መናፈቅ"
                app:titleTextColor="#fff"
                app:subtitle="fellowship"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="20dp"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<android.support.v7.widget.CardView
    android:layout_margin="5dp"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/title1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/subtitle1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15.5sp"
                android:text="@string/bislet"/>
            <Button
                android:id="@+id/study1btn"
                android:layout_width="200dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="መወያያ ጥያቄዎች"
                android:textColor="#af532c"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="170dp" />
        </LinearLayout>
</android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>